Make SharedGpuContext recover automatically after a context loss

The lack of gpu context recovery was causing some layout tests
to be flaky. After running the test
virtual/gpu/fast/canvas/canvas-lost-gpu-context.html all subsequent
gpu tests run in the same instance of content_shell would fail.

BUG=646973

Review-Url: https://codereview.chromium.org/2335223004
Cr-Commit-Position: refs/heads/master@{#418998}

Former-commit-id: bb27517d08d74205ceaddc98cfae311916883d09